Implement user and subject management features in admin dashboard; add routing, hooks for permissions, and enhance UI components for user and subject management pages

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -107,9 +107,16 @@
   "curriculumNoCurricula": "No curricula for this program",
   "curriculumVersion": "Version",
   "curriculumStartYear": "Start year",
+  "curriculumEndYear": "End year",
+  "curriculumEndYearPlaceholder": "Optional (>= start year)",
   "curriculumIsActive": "Active",
   "curriculumActiveYes": "Yes",
   "curriculumActiveNo": "No",
+  "curriculumStatus": "Status",
+  "curriculumStatusDraft": "Draft",
+  "curriculumStatusUnderReview": "Under review",
+  "curriculumStatusApproved": "Approved",
+  "curriculumStatusArchived": "Archived",
   "curriculumNotes": "Notes",
   "curriculumCreatePageTitle": "Create curriculum",
   "curriculumVersionRequired": "Version *",
@@ -119,6 +126,8 @@
   "curriculumCreating": "Creating…",
   "curriculumErrorVersionRequired": "Version is required",
   "curriculumErrorStartYearRange": "Start year must be between 1900 and 2100",
+  "curriculumErrorEndYearRange": "End year must be between 1900 and 2100",
+  "curriculumErrorEndYearGteStartYear": "End year must be greater than or equal to start year",
   "curriculumErrorVersionExists": "A curriculum with this version already exists for this program",
   "curriculumErrorValidation": "Please check the fields and fix errors.",
   "curriculumErrorProgramNotFound": "Program not found. Please go back to the program list.",
@@ -141,6 +150,7 @@
   "invitationCreate": "Create Invitation",
   "invitationSearch": "Search by email, name...",
   "invitationNoInvitations": "No invitations",
+  "invitationLoadMore": "Load more",
   "invitationAdd": "+ Create invitation",
   "invitationEmail": "Email",
   "invitationRoles": "Roles",
@@ -209,5 +219,89 @@
   "invitationAtLeastOneRole": "Add at least one role.",
   "invitationRoleAlreadyAdded": "This role is already added.",
   "dateFormat": "Date",
-  "timeFormat": "Time"
+  "timeFormat": "Time",
+  "menuAccounts": "Users",
+  "accountManagement": "User Management",
+  "accountSubtitle": "View and edit users. List and edit are available to Moderator, Administrator, and Super Administrator.",
+  "accountViewOnlyHint": "You can only view users. Editing and deleting require Moderator, Administrator, or Super Administrator role.",
+  "accountSearch": "Search by email, name...",
+  "accountNoUsers": "No users",
+  "accountLoadMore": "Load more",
+  "accountStatus": "Status",
+  "accountStatusPending": "Pending",
+  "accountStatusActive": "Active",
+  "accountErrorLoadList": "Could not load users",
+  "accountErrorLoad": "Could not load user",
+  "accountUserNotFound": "User not found",
+  "accountViewPageTitle": "User: {{name}}",
+  "accountEditPageTitle": "Edit user",
+  "accountSave": "Save",
+  "accountErrorUpdate": "Error updating user",
+  "accountErrorDelete": "Error deleting user",
+  "accountDeleteConfirmTitle": "Delete user?",
+  "accountDeleteConfirmText": "This action cannot be undone. The user account will be removed.",
+  "accountActivatedAt": "Activated at",
+  "accountLastLoginAt": "Last login",
+  "accountRolesHint": "At most one managing role (Staff, Moderator, Administrator, Super Administrator).",
+  "accountEditHint": "Edit the fields below and click Save.",
+  "menuSubjects": "Subjects",
+  "subjectManagement": "Subject & Assessment Type Management",
+  "subjectSubtitle": "Manage disciplines (subjects) and assessment types (exam, pass/fail, etc.).",
+  "subjectSectionDisciplines": "Disciplines",
+  "subjectSectionDisciplinesHint": "Catalog of subjects (e.g. mathematics, physics). Used in programs and schedules.",
+  "subjectSectionAssessmentTypes": "Assessment types",
+  "subjectSectionAssessmentTypesHint": "Types of assessment (exam, pass/fail, course work). Used in grading settings.",
+  "subjectSearchPlaceholder": "Search by code, name...",
+  "subjectCreate": "Create discipline",
+  "subjectNoItems": "No disciplines",
+  "subjectAddFirst": "+ Add first discipline",
+  "subjectChineseName": "Chinese name",
+  "subjectEnglishName": "English name",
+  "subjectChineseNameRequired": "Chinese name *",
+  "subjectChineseNamePlaceholder": "e.g. 高等数学",
+  "subjectEnglishNamePlaceholder": "e.g. Advanced Mathematics",
+  "subjectCodeRequired": "Code *",
+  "subjectCreatePageTitle": "Create discipline",
+  "subjectEditPageTitle": "Edit discipline",
+  "subjectViewPageTitle": "Discipline: {{name}}",
+  "subjectNotFound": "Discipline not found",
+  "subjectErrorLoad": "Could not load discipline",
+  "subjectErrorLoadList": "Could not load disciplines",
+  "subjectErrorCreate": "Error creating discipline",
+  "subjectErrorUpdate": "Error updating discipline",
+  "subjectErrorDelete": "Delete error ({{status}})",
+  "subjectErrorCodeRequired": "Code is required",
+  "subjectErrorChineseNameRequired": "Chinese name is required",
+  "subjectErrorCodeExists": "A discipline with this code already exists",
+  "subjectErrorValidation": "Please check the fields and fix errors.",
+  "subjectSuccessDeleted": "Discipline deleted",
+  "subjectDeleteConfirmTitle": "Delete discipline?",
+  "subjectDeleteConfirmText": "This action cannot be undone.",
+  "subjectAssessmentTypeCreate": "Create assessment type",
+  "subjectAssessmentTypeSearchPlaceholder": "Search by code, name...",
+  "subjectAssessmentTypeNoItems": "No assessment types",
+  "subjectAssessmentTypeAddFirst": "+ Add first assessment type",
+  "subjectAssessmentTypeIsGraded": "Graded",
+  "subjectAssessmentTypeIsFinal": "Final",
+  "subjectAssessmentTypeSortOrder": "Sort order",
+  "subjectAssessmentTypeCreatePageTitle": "Create assessment type",
+  "subjectAssessmentTypeEditPageTitle": "Edit assessment type",
+  "subjectAssessmentTypeNotFound": "Assessment type not found",
+  "subjectAssessmentTypeErrorLoad": "Could not load assessment type",
+  "subjectAssessmentTypeErrorLoadList": "Could not load assessment types",
+  "subjectAssessmentTypeErrorCreate": "Error creating assessment type",
+  "subjectAssessmentTypeErrorUpdate": "Error updating assessment type",
+  "subjectAssessmentTypeErrorDelete": "Delete error ({{status}})",
+  "subjectAssessmentTypeErrorCodeExists": "An assessment type with this code already exists",
+  "subjectAssessmentTypeErrorSortOrderNumber": "Sort order must be a number",
+  "subjectAssessmentTypeSuccessDeleted": "Assessment type deleted",
+  "subjectAssessmentTypeDeleteConfirmTitle": "Delete assessment type?",
+  "subjectAssessmentTypeDeleteConfirmText": "This action cannot be undone.",
+  "assessmentTypeCode_EXAM": "Exam",
+  "assessmentTypeCode_PASS": "Pass/Fail",
+  "assessmentTypeCode_DIFF_PASS": "Differentiated pass",
+  "assessmentTypeCode_COURSE_WORK": "Course work",
+  "assessmentTypeCode_COURSE_PROJECT": "Course project",
+  "assessmentTypeCode_MIDTERM": "Midterm",
+  "assessmentTypeCode_TEST": "Test"
 }
