--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -107,9 +107,16 @@
   "curriculumNoCurricula": "Нет учебных планов по этой программе",
   "curriculumVersion": "Версия",
   "curriculumStartYear": "Год начала",
+  "curriculumEndYear": "Год окончания",
+  "curriculumEndYearPlaceholder": "Необязательно (>= года начала)",
   "curriculumIsActive": "Активен",
   "curriculumActiveYes": "Да",
   "curriculumActiveNo": "Нет",
+  "curriculumStatus": "Статус",
+  "curriculumStatusDraft": "Черновик",
+  "curriculumStatusUnderReview": "На проверке",
+  "curriculumStatusApproved": "Утверждён",
+  "curriculumStatusArchived": "Архив",
   "curriculumNotes": "Заметки",
   "curriculumCreatePageTitle": "Создать учебный план",
   "curriculumVersionRequired": "Версия *",
@@ -119,6 +126,8 @@
   "curriculumCreating": "Создание…",
   "curriculumErrorVersionRequired": "Версия обязательна",
   "curriculumErrorStartYearRange": "Год начала должен быть от 1900 до 2100",
+  "curriculumErrorEndYearRange": "Год окончания должен быть от 1900 до 2100",
+  "curriculumErrorEndYearGteStartYear": "Год окончания должен быть больше или равен году начала",
   "curriculumErrorVersionExists": "Учебный план с такой версией уже существует для этой программы",
   "curriculumErrorValidation": "Проверьте заполненные поля и исправьте ошибки.",
   "curriculumErrorProgramNotFound": "Программа не найдена. Вернитесь к списку программ.",
@@ -141,6 +150,7 @@
   "invitationCreate": "Создать приглашение",
   "invitationSearch": "Поиск по email, имени...",
   "invitationNoInvitations": "Нет приглашений",
+  "invitationLoadMore": "Загрузить ещё",
   "invitationAdd": "+ Создать приглашение",
   "invitationEmail": "Email",
   "invitationRoles": "Роли",
@@ -209,5 +219,89 @@
   "invitationAtLeastOneRole": "Добавьте хотя бы одну роль.",
   "invitationRoleAlreadyAdded": "Эта роль уже добавлена.",
   "dateFormat": "Дата",
-  "timeFormat": "Время"
+  "timeFormat": "Время",
+  "menuAccounts": "Пользователи",
+  "accountManagement": "Управление пользователями",
+  "accountSubtitle": "Просмотр и редактирование пользователей. Список и редактирование доступны Модератору, Администратору и Супер-администратору.",
+  "accountViewOnlyHint": "Вам доступен только просмотр пользователей. Редактирование и удаление требуют роли Модератор, Администратор или Супер-администратор.",
+  "accountSearch": "Поиск по email, имени...",
+  "accountNoUsers": "Нет пользователей",
+  "accountLoadMore": "Загрузить ещё",
+  "accountStatus": "Статус",
+  "accountStatusPending": "Ожидает",
+  "accountStatusActive": "Активен",
+  "accountErrorLoadList": "Не удалось загрузить пользователей",
+  "accountErrorLoad": "Не удалось загрузить пользователя",
+  "accountUserNotFound": "Пользователь не найден",
+  "accountViewPageTitle": "Пользователь: {{name}}",
+  "accountEditPageTitle": "Редактировать пользователя",
+  "accountSave": "Сохранить",
+  "accountErrorUpdate": "Ошибка обновления пользователя",
+  "accountErrorDelete": "Ошибка удаления пользователя",
+  "accountDeleteConfirmTitle": "Удалить пользователя?",
+  "accountDeleteConfirmText": "Это действие нельзя отменить. Учётная запись пользователя будет удалена.",
+  "accountActivatedAt": "Активирован",
+  "accountLastLoginAt": "Последний вход",
+  "accountRolesHint": "Не более одной управляющей роли (Сотрудник, Модератор, Администратор, Супер-администратор).",
+  "accountEditHint": "Измените поля ниже и нажмите «Сохранить».",
+  "menuSubjects": "Дисциплины и типы контроля",
+  "subjectManagement": "Управление дисциплинами и типами контроля",
+  "subjectSubtitle": "Справочники дисциплин (предметов) и видов аттестации (экзамен, зачёт и т.д.).",
+  "subjectSectionDisciplines": "Дисциплины",
+  "subjectSectionDisciplinesHint": "Каталог учебных дисциплин (математика, физика и т.д.). Используется в программах и расписании.",
+  "subjectSectionAssessmentTypes": "Типы контроля",
+  "subjectSectionAssessmentTypesHint": "Виды аттестации (экзамен, зачёт, курсовая). Используются в настройках оценок.",
+  "subjectSearchPlaceholder": "Поиск по коду, названию...",
+  "subjectCreate": "Создать дисциплину",
+  "subjectNoItems": "Нет дисциплин",
+  "subjectAddFirst": "+ Добавить дисциплину",
+  "subjectChineseName": "Название (кит.)",
+  "subjectEnglishName": "Название (англ.)",
+  "subjectChineseNameRequired": "Название на китайском *",
+  "subjectChineseNamePlaceholder": "напр. 高等数学",
+  "subjectEnglishNamePlaceholder": "напр. Advanced Mathematics",
+  "subjectCodeRequired": "Код *",
+  "subjectCreatePageTitle": "Создать дисциплину",
+  "subjectEditPageTitle": "Редактировать дисциплину",
+  "subjectViewPageTitle": "Дисциплина: {{name}}",
+  "subjectNotFound": "Дисциплина не найдена",
+  "subjectErrorLoad": "Не удалось загрузить дисциплину",
+  "subjectErrorLoadList": "Не удалось загрузить список дисциплин",
+  "subjectErrorCreate": "Ошибка создания дисциплины",
+  "subjectErrorUpdate": "Ошибка обновления дисциплины",
+  "subjectErrorDelete": "Ошибка удаления ({{status}})",
+  "subjectErrorCodeRequired": "Код обязателен",
+  "subjectErrorChineseNameRequired": "Название на китайском обязательно",
+  "subjectErrorCodeExists": "Дисциплина с таким кодом уже существует",
+  "subjectErrorValidation": "Проверьте поля и исправьте ошибки.",
+  "subjectSuccessDeleted": "Дисциплина удалена",
+  "subjectDeleteConfirmTitle": "Удалить дисциплину?",
+  "subjectDeleteConfirmText": "Это действие нельзя отменить.",
+  "subjectAssessmentTypeCreate": "Создать тип контроля",
+  "subjectAssessmentTypeSearchPlaceholder": "Поиск по коду, названию...",
+  "subjectAssessmentTypeNoItems": "Нет типов контроля",
+  "subjectAssessmentTypeAddFirst": "+ Добавить тип контроля",
+  "subjectAssessmentTypeIsGraded": "С оценкой",
+  "subjectAssessmentTypeIsFinal": "Итоговый",
+  "subjectAssessmentTypeSortOrder": "Порядок",
+  "subjectAssessmentTypeCreatePageTitle": "Создать тип контроля",
+  "subjectAssessmentTypeEditPageTitle": "Редактировать тип контроля",
+  "subjectAssessmentTypeNotFound": "Тип контроля не найден",
+  "subjectAssessmentTypeErrorLoad": "Не удалось загрузить тип контроля",
+  "subjectAssessmentTypeErrorLoadList": "Не удалось загрузить типы контроля",
+  "subjectAssessmentTypeErrorCreate": "Ошибка создания типа контроля",
+  "subjectAssessmentTypeErrorUpdate": "Ошибка обновления типа контроля",
+  "subjectAssessmentTypeErrorDelete": "Ошибка удаления ({{status}})",
+  "subjectAssessmentTypeErrorCodeExists": "Тип контроля с таким кодом уже существует",
+  "subjectAssessmentTypeErrorSortOrderNumber": "Порядок должен быть числом",
+  "subjectAssessmentTypeSuccessDeleted": "Тип контроля удалён",
+  "subjectAssessmentTypeDeleteConfirmTitle": "Удалить тип контроля?",
+  "subjectAssessmentTypeDeleteConfirmText": "Это действие нельзя отменить.",
+  "assessmentTypeCode_EXAM": "Экзамен",
+  "assessmentTypeCode_PASS": "Зачёт",
+  "assessmentTypeCode_DIFF_PASS": "Дифференцированный зачёт",
+  "assessmentTypeCode_COURSE_WORK": "Курсовая работа",
+  "assessmentTypeCode_COURSE_PROJECT": "Курсовой проект",
+  "assessmentTypeCode_MIDTERM": "Рубежный контроль",
+  "assessmentTypeCode_TEST": "Тест"
 }
