--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -107,9 +107,16 @@
   "curriculumNoCurricula": "该项目暂无教学计划",
   "curriculumVersion": "版本",
   "curriculumStartYear": "起始年份",
+  "curriculumEndYear": "结束年份",
+  "curriculumEndYearPlaceholder": "可选（>= 起始年份）",
   "curriculumIsActive": "启用",
   "curriculumActiveYes": "是",
   "curriculumActiveNo": "否",
+  "curriculumStatus": "状态",
+  "curriculumStatusDraft": "草稿",
+  "curriculumStatusUnderReview": "审核中",
+  "curriculumStatusApproved": "已批准",
+  "curriculumStatusArchived": "已归档",
   "curriculumNotes": "备注",
   "curriculumCreatePageTitle": "新建教学计划",
   "curriculumVersionRequired": "版本 *",
@@ -119,6 +126,8 @@
   "curriculumCreating": "创建中…",
   "curriculumErrorVersionRequired": "版本必填",
   "curriculumErrorStartYearRange": "起始年份须在 1900–2100 之间",
+  "curriculumErrorEndYearRange": "结束年份须在 1900–2100 之间",
+  "curriculumErrorEndYearGteStartYear": "结束年份须大于或等于起始年份",
   "curriculumErrorVersionExists": "该项目已存在相同版本的教学计划",
   "curriculumErrorValidation": "请检查并修正填写错误。",
   "curriculumErrorProgramNotFound": "未找到项目。请返回项目列表。",
@@ -141,6 +150,7 @@
   "invitationCreate": "创建邀请",
   "invitationSearch": "按邮箱、姓名搜索...",
   "invitationNoInvitations": "暂无邀请",
+  "invitationLoadMore": "加载更多",
   "invitationAdd": "+ 创建邀请",
   "invitationEmail": "邮箱",
   "invitationRoles": "角色",
@@ -209,5 +219,89 @@
   "invitationAtLeastOneRole": "请至少添加一个角色。",
   "invitationRoleAlreadyAdded": "该角色已添加。",
   "dateFormat": "日期",
-  "timeFormat": "时间"
+  "timeFormat": "时间",
+  "menuAccounts": "用户",
+  "accountManagement": "用户管理",
+  "accountSubtitle": "查看和编辑用户。列表和编辑对版主、管理员和超级管理员开放。",
+  "accountViewOnlyHint": "您只能查看用户。编辑和删除需要版主、管理员或超级管理员角色。",
+  "accountSearch": "按邮箱、姓名搜索...",
+  "accountNoUsers": "暂无用户",
+  "accountLoadMore": "加载更多",
+  "accountStatus": "状态",
+  "accountStatusPending": "待处理",
+  "accountStatusActive": "已激活",
+  "accountErrorLoadList": "无法加载用户列表",
+  "accountErrorLoad": "无法加载用户",
+  "accountUserNotFound": "用户未找到",
+  "accountViewPageTitle": "用户：{{name}}",
+  "accountEditPageTitle": "编辑用户",
+  "accountSave": "保存",
+  "accountErrorUpdate": "更新用户失败",
+  "accountErrorDelete": "删除用户失败",
+  "accountDeleteConfirmTitle": "删除用户？",
+  "accountDeleteConfirmText": "此操作不可撤销。用户账户将被删除。",
+  "accountActivatedAt": "激活时间",
+  "accountLastLoginAt": "上次登录",
+  "accountRolesHint": "管理角色最多一个（职员、版主、管理员、超级管理员）。",
+  "accountEditHint": "在下方修改字段后点击「保存」。",
+  "menuSubjects": "学科与考核类型",
+  "subjectManagement": "学科与考核类型管理",
+  "subjectSubtitle": "管理学科（课程）及考核类型（考试、考查等）。",
+  "subjectSectionDisciplines": "学科",
+  "subjectSectionDisciplinesHint": "学科目录（如数学、物理）。用于项目与排课。",
+  "subjectSectionAssessmentTypes": "考核类型",
+  "subjectSectionAssessmentTypesHint": "考核方式（考试、考查、课程论文等）。用于成绩设置。",
+  "subjectSearchPlaceholder": "按代码、名称搜索...",
+  "subjectCreate": "新建学科",
+  "subjectNoItems": "暂无学科",
+  "subjectAddFirst": "+ 添加学科",
+  "subjectChineseName": "中文名称",
+  "subjectEnglishName": "英文名称",
+  "subjectChineseNameRequired": "中文名称 *",
+  "subjectChineseNamePlaceholder": "如 高等数学",
+  "subjectEnglishNamePlaceholder": "如 Advanced Mathematics",
+  "subjectCodeRequired": "代码 *",
+  "subjectCreatePageTitle": "新建学科",
+  "subjectEditPageTitle": "编辑学科",
+  "subjectViewPageTitle": "学科：{{name}}",
+  "subjectNotFound": "学科未找到",
+  "subjectErrorLoad": "无法加载学科",
+  "subjectErrorLoadList": "无法加载学科列表",
+  "subjectErrorCreate": "创建学科失败",
+  "subjectErrorUpdate": "更新学科失败",
+  "subjectErrorDelete": "删除失败 ({{status}})",
+  "subjectErrorCodeRequired": "代码必填",
+  "subjectErrorChineseNameRequired": "中文名称必填",
+  "subjectErrorCodeExists": "该代码的学科已存在",
+  "subjectErrorValidation": "请检查并修正填写错误。",
+  "subjectSuccessDeleted": "学科已删除",
+  "subjectDeleteConfirmTitle": "删除学科？",
+  "subjectDeleteConfirmText": "此操作不可撤销。",
+  "subjectAssessmentTypeCreate": "新建考核类型",
+  "subjectAssessmentTypeSearchPlaceholder": "按代码、名称搜索...",
+  "subjectAssessmentTypeNoItems": "暂无考核类型",
+  "subjectAssessmentTypeAddFirst": "+ 添加考核类型",
+  "subjectAssessmentTypeIsGraded": "计分",
+  "subjectAssessmentTypeIsFinal": "期末",
+  "subjectAssessmentTypeSortOrder": "排序",
+  "subjectAssessmentTypeCreatePageTitle": "新建考核类型",
+  "subjectAssessmentTypeEditPageTitle": "编辑考核类型",
+  "subjectAssessmentTypeNotFound": "考核类型未找到",
+  "subjectAssessmentTypeErrorLoad": "无法加载考核类型",
+  "subjectAssessmentTypeErrorLoadList": "无法加载考核类型列表",
+  "subjectAssessmentTypeErrorCreate": "创建考核类型失败",
+  "subjectAssessmentTypeErrorUpdate": "更新考核类型失败",
+  "subjectAssessmentTypeErrorDelete": "删除失败 ({{status}})",
+  "subjectAssessmentTypeErrorCodeExists": "该代码的考核类型已存在",
+  "subjectAssessmentTypeErrorSortOrderNumber": "排序必须为数字",
+  "subjectAssessmentTypeSuccessDeleted": "考核类型已删除",
+  "subjectAssessmentTypeDeleteConfirmTitle": "删除考核类型？",
+  "subjectAssessmentTypeDeleteConfirmText": "此操作不可撤销。",
+  "assessmentTypeCode_EXAM": "考试",
+  "assessmentTypeCode_PASS": "考查",
+  "assessmentTypeCode_DIFF_PASS": "分级考查",
+  "assessmentTypeCode_COURSE_WORK": "课程论文",
+  "assessmentTypeCode_COURSE_PROJECT": "课程设计",
+  "assessmentTypeCode_MIDTERM": "期中考试",
+  "assessmentTypeCode_TEST": "测验"
 }
