Add curriculum subjects management features to admin dashboard; implement API integration, routing, and UI components for creating, editing, and viewing curriculum-subject relationships

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -230,6 +230,12 @@
   "accountStatus": "Status",
   "accountStatusPending": "Pending",
   "accountStatusActive": "Active",
+  "accountStatusDisabled": "Disabled",
+  "accountSectionAccount": "Account",
+  "accountSectionTeacherProfile": "Teacher profile",
+  "accountSectionStudentProfile": "Student profile",
+  "accountDisplayNameLabel": "Display name",
+  "accountProfileUpdatedAt": "Updated at",
   "accountErrorLoadList": "Could not load users",
   "accountErrorLoad": "Could not load user",
   "accountUserNotFound": "User not found",
@@ -303,5 +309,103 @@
   "assessmentTypeCode_COURSE_WORK": "Course work",
   "assessmentTypeCode_COURSE_PROJECT": "Course project",
   "assessmentTypeCode_MIDTERM": "Midterm",
-  "assessmentTypeCode_TEST": "Test"
+  "assessmentTypeCode_TEST": "Test",
+  "profilePageTitle": "Profile: {{name}}",
+  "profilePageTitleShort": "My profile",
+  "profileEditTitle": "Edit profile",
+  "profileEditHint": "Edit your name, phone and birth date below. Email cannot be changed here.",
+  "profileIntro": "This is your administrator profile. You can edit only your basic account information (name, phone, birth date). Data for other roles (e.g. teacher or student) is managed in their respective sections.",
+  "profileErrorLoad": "Could not load profile",
+  "profileErrorUpdate": "Error updating profile",
+  "profileCardPersonal": "Personal information",
+  "profileDoubleClickToEdit": "Double-click to edit",
+  "profilePressEnterToSave": "Enter to save, Escape to cancel",
+  "profileAccountReadOnly": "Email and roles cannot be changed here.",
+  "profileMemberSince": "Member since",
+  "profileChangePassword": "Change password",
+  "profileCurrentPassword": "Current password",
+  "profileNewPassword": "New password",
+  "profileConfirmPassword": "Confirm new password",
+  "profileUpdatePassword": "Update password",
+  "profilePasswordComingSoon": "Password change will be available soon.",
+  "profilePermissionsTitle": "Permissions & access",
+  "profilePermissionActive": "Active",
+  "profilePermissionDefaultDesc": "Access granted for this role.",
+  "permissionStaffDesc": "View only. Can browse departments, programs, subjects, users and invitations. Cannot create, edit, delete or invite anyone.",
+  "permissionModeratorDesc": "Full access to view and edit all data: departments, programs, subjects, users. Cannot create or manage invitations (invite new users).",
+  "permissionAdminDesc": "Full access: manage users, send and cancel invitations, edit all system data and settings.",
+  "permissionSuperAdminDesc": "Full administrative access without restrictions.",
+  "curriculumSubjectsSectionTitle": "Curriculum Subjects",
+  "curriculumSubjectsPageTitle": "Subjects in curriculum {{version}}",
+  "curriculumSubjectsViewTitle": "View subjects",
+  "curriculumSubjectsTotalSubjects": "Total subjects",
+  "curriculumSubjectsTotalCredits": "Total credits",
+  "curriculumSubjectsTotalHours": "Total hours",
+  "curriculumSubjectsTotalSemesters": "Semesters",
+  "curriculumSubjectSearchPlaceholder": "Search subjects...",
+  "curriculumSubjectFilterBySemester": "Filter by semester",
+  "curriculumSubjectAllSemesters": "All semesters",
+  "curriculumSubjectSemesterN": "Semester {{n}}",
+  "curriculumSubjectSubjectsCount": "subjects",
+  "curriculumSubjectAdd": "Add subject",
+  "curriculumSubjectAddFirst": "Add first subject",
+  "curriculumSubjectNoSubjects": "No subjects in this curriculum",
+  "curriculumSubjectNoSubjectsHint": "Add subjects to the curriculum to define the educational program structure.",
+  "curriculumSubjectCredits": "Credits",
+  "curriculumSubjectHoursTotal": "Total hours",
+  "curriculumSubjectHoursLecture": "Lectures",
+  "curriculumSubjectHoursPractice": "Practice",
+  "curriculumSubjectHoursLab": "Lab",
+  "curriculumSubjectHoursSeminar": "Seminar",
+  "curriculumSubjectHoursSelfStudy": "Self-study",
+  "curriculumSubjectHoursConsultation": "Consultation",
+  "curriculumSubjectHoursCourseWork": "Course work",
+  "curriculumSubjectAssessmentType": "Assessment",
+  "curriculumSubjectViewSubject": "View subject details",
+  "curriculumSubjectCreatePageTitle": "Add subject to curriculum",
+  "curriculumSubjectEditPageTitle": "Edit curriculum subject",
+  "curriculumSubjectCreate": "Add subject",
+  "curriculumSubjectSectionSelectSubject": "Select subject",
+  "curriculumSubjectSubjectSearch": "Search subject",
+  "curriculumSubjectSubjectSearchPlaceholder": "Search by code or name...",
+  "curriculumSubjectSubject": "Subject",
+  "curriculumSubjectSelectSubject": "— Select subject —",
+  "curriculumSubjectSelectedSubject": "Selected subject:",
+  "curriculumSubjectSectionBasicParams": "Basic parameters",
+  "curriculumSubjectSemester": "Semester",
+  "curriculumSubjectCourseYear": "Course year",
+  "curriculumSubjectCourseYearPlaceholder": "e.g. 1",
+  "curriculumSubjectDurationWeeks": "Duration (weeks)",
+  "curriculumSubjectWeeks": "weeks",
+  "curriculumSubjectSelectAssessmentType": "— Select assessment type —",
+  "curriculumSubjectCreditsPlaceholder": "e.g. 3.5",
+  "curriculumSubjectSectionHours": "Hours distribution",
+  "curriculumSubjectSectionEditableParams": "Editable parameters",
+  "curriculumSubjectInfoTitle": "Subject information",
+  "curriculumSubjectErrorSubjectRequired": "Subject is required",
+  "curriculumSubjectErrorSemesterRequired": "Semester must be at least 1",
+  "curriculumSubjectErrorDurationRequired": "Duration is required",
+  "curriculumSubjectErrorAssessmentRequired": "Assessment type is required",
+  "curriculumSubjectErrorConflict": "This subject is already added to this semester",
+  "curriculumSubjectErrorValidation": "Please check the fields and fix errors.",
+  "curriculumSubjectErrorNotFound": "Subject or assessment type not found",
+  "curriculumSubjectErrorCreate": "Error adding subject to curriculum",
+  "curriculumSubjectErrorUpdate": "Error updating curriculum subject",
+  "curriculumSubjectErrorDelete": "Error removing subject from curriculum",
+  "curriculumSubjectErrorLoad": "Could not load curriculum subject",
+  "curriculumSubjectNotFoundOrDeleted": "Curriculum subject not found or has been deleted",
+  "curriculumSubjectSuccessDeleted": "Subject removed from curriculum",
+  "curriculumSubjectSuccessUpdated": "Curriculum subject updated",
+  "curriculumSubjectNoChanges": "No changes to save",
+  "curriculumSubjectDeleteConfirmTitle": "Remove subject from curriculum?",
+  "curriculumSubjectDeleteConfirmText": "The subject will be removed from this curriculum. This action cannot be undone.",
+  "curriculumStatusDRAFT": "Draft",
+  "curriculumStatusUNDER_REVIEW": "Under review",
+  "curriculumStatusAPPROVED": "Approved",
+  "curriculumStatusARCHIVED": "Archived",
+  "subjectUsagesTitle": "Usage in curricula",
+  "subjectUsagesSubtitle": "This subject is included in the following curricula:",
+  "subjectNotInAnyCurriculum": "This subject is not used in any curriculum yet",
+  "subjectNotInAnyCurriculumHint": "Add this subject to a curriculum to include it in an educational program.",
+  "subjectGoToPrograms": "Go to Programs & Curricula"
 }
