--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -230,6 +230,12 @@
   "accountStatus": "Статус",
   "accountStatusPending": "Ожидает",
   "accountStatusActive": "Активен",
+  "accountStatusDisabled": "Отключён",
+  "accountSectionAccount": "Аккаунт",
+  "accountSectionTeacherProfile": "Профиль преподавателя",
+  "accountSectionStudentProfile": "Профиль студента",
+  "accountDisplayNameLabel": "Имя для отображения",
+  "accountProfileUpdatedAt": "Обновлено",
   "accountErrorLoadList": "Не удалось загрузить пользователей",
   "accountErrorLoad": "Не удалось загрузить пользователя",
   "accountUserNotFound": "Пользователь не найден",
@@ -303,5 +309,103 @@
   "assessmentTypeCode_COURSE_WORK": "Курсовая работа",
   "assessmentTypeCode_COURSE_PROJECT": "Курсовой проект",
   "assessmentTypeCode_MIDTERM": "Рубежный контроль",
-  "assessmentTypeCode_TEST": "Тест"
+  "assessmentTypeCode_TEST": "Тест",
+  "profilePageTitle": "Профиль: {{name}}",
+  "profilePageTitleShort": "Мой профиль",
+  "profileEditTitle": "Редактировать профиль",
+  "profileEditHint": "Измените имя, телефон и дату рождения ниже. Email здесь изменить нельзя.",
+  "profileIntro": "Это ваш профиль администратора. Здесь можно редактировать только основные данные (имя, телефон, дата рождения). Данные по другим ролям (преподаватель, студент) управляются в соответствующих разделах.",
+  "profileErrorLoad": "Не удалось загрузить профиль",
+  "profileErrorUpdate": "Ошибка обновления профиля",
+  "profileCardPersonal": "Личные данные",
+  "profileDoubleClickToEdit": "Двойной клик для редактирования",
+  "profilePressEnterToSave": "Enter — сохранить, Escape — отмена",
+  "profileAccountReadOnly": "Email и роли здесь изменить нельзя.",
+  "profileMemberSince": "В системе с",
+  "profileChangePassword": "Сменить пароль",
+  "profileCurrentPassword": "Текущий пароль",
+  "profileNewPassword": "Новый пароль",
+  "profileConfirmPassword": "Подтвердите новый пароль",
+  "profileUpdatePassword": "Обновить пароль",
+  "profilePasswordComingSoon": "Смена пароля будет доступна позже.",
+  "profilePermissionsTitle": "Права и доступ",
+  "profilePermissionActive": "Активна",
+  "profilePermissionDefaultDesc": "Доступ предоставлен для этой роли.",
+  "permissionStaffDesc": "Только просмотр. Можно просматривать отделы, программы, дисциплины, пользователей и приглашения. Нельзя создавать, редактировать, удалять или приглашать.",
+  "permissionModeratorDesc": "Полный доступ на просмотр и редактирование: отделы, программы, дисциплины, пользователи. Нельзя создавать приглашения и приглашать новых пользователей.",
+  "permissionAdminDesc": "Полный доступ: управление пользователями, приглашениями и всеми данными системы.",
+  "permissionSuperAdminDesc": "Полные права администратора без ограничений.",
+  "curriculumSubjectsSectionTitle": "Предметы учебного плана",
+  "curriculumSubjectsPageTitle": "Предметы учебного плана {{version}}",
+  "curriculumSubjectsViewTitle": "Просмотр предметов",
+  "curriculumSubjectsTotalSubjects": "Всего предметов",
+  "curriculumSubjectsTotalCredits": "Всего кредитов",
+  "curriculumSubjectsTotalHours": "Всего часов",
+  "curriculumSubjectsTotalSemesters": "Семестров",
+  "curriculumSubjectSearchPlaceholder": "Поиск предметов...",
+  "curriculumSubjectFilterBySemester": "Фильтр по семестру",
+  "curriculumSubjectAllSemesters": "Все семестры",
+  "curriculumSubjectSemesterN": "Семестр {{n}}",
+  "curriculumSubjectSubjectsCount": "предметов",
+  "curriculumSubjectAdd": "Добавить предмет",
+  "curriculumSubjectAddFirst": "Добавить первый предмет",
+  "curriculumSubjectNoSubjects": "В этом учебном плане нет предметов",
+  "curriculumSubjectNoSubjectsHint": "Добавьте предметы в учебный план, чтобы определить структуру образовательной программы.",
+  "curriculumSubjectCredits": "Кредиты",
+  "curriculumSubjectHoursTotal": "Всего часов",
+  "curriculumSubjectHoursLecture": "Лекции",
+  "curriculumSubjectHoursPractice": "Практика",
+  "curriculumSubjectHoursLab": "Лаборатории",
+  "curriculumSubjectHoursSeminar": "Семинары",
+  "curriculumSubjectHoursSelfStudy": "Сам. работа",
+  "curriculumSubjectHoursConsultation": "Консультации",
+  "curriculumSubjectHoursCourseWork": "Курсовая",
+  "curriculumSubjectAssessmentType": "Контроль",
+  "curriculumSubjectViewSubject": "Просмотр предмета",
+  "curriculumSubjectCreatePageTitle": "Добавить предмет в учебный план",
+  "curriculumSubjectEditPageTitle": "Редактирование предмета в плане",
+  "curriculumSubjectCreate": "Добавить предмет",
+  "curriculumSubjectSectionSelectSubject": "Выбор предмета",
+  "curriculumSubjectSubjectSearch": "Поиск предмета",
+  "curriculumSubjectSubjectSearchPlaceholder": "Поиск по коду или названию...",
+  "curriculumSubjectSubject": "Предмет",
+  "curriculumSubjectSelectSubject": "— Выберите предмет —",
+  "curriculumSubjectSelectedSubject": "Выбранный предмет:",
+  "curriculumSubjectSectionBasicParams": "Основные параметры",
+  "curriculumSubjectSemester": "Семестр",
+  "curriculumSubjectCourseYear": "Курс",
+  "curriculumSubjectCourseYearPlaceholder": "напр. 1",
+  "curriculumSubjectDurationWeeks": "Длительность (недель)",
+  "curriculumSubjectWeeks": "нед.",
+  "curriculumSubjectSelectAssessmentType": "— Выберите тип контроля —",
+  "curriculumSubjectCreditsPlaceholder": "напр. 3.5",
+  "curriculumSubjectSectionHours": "Распределение часов",
+  "curriculumSubjectSectionEditableParams": "Редактируемые параметры",
+  "curriculumSubjectInfoTitle": "Информация о предмете",
+  "curriculumSubjectErrorSubjectRequired": "Выберите предмет",
+  "curriculumSubjectErrorSemesterRequired": "Семестр должен быть не менее 1",
+  "curriculumSubjectErrorDurationRequired": "Укажите длительность",
+  "curriculumSubjectErrorAssessmentRequired": "Выберите тип контроля",
+  "curriculumSubjectErrorConflict": "Этот предмет уже добавлен в данный семестр",
+  "curriculumSubjectErrorValidation": "Проверьте правильность заполнения полей.",
+  "curriculumSubjectErrorNotFound": "Предмет или тип контроля не найден",
+  "curriculumSubjectErrorCreate": "Ошибка добавления предмета в план",
+  "curriculumSubjectErrorUpdate": "Ошибка обновления предмета в плане",
+  "curriculumSubjectErrorDelete": "Ошибка удаления предмета из плана",
+  "curriculumSubjectErrorLoad": "Не удалось загрузить предмет учебного плана",
+  "curriculumSubjectNotFoundOrDeleted": "Предмет учебного плана не найден или удалён",
+  "curriculumSubjectSuccessDeleted": "Предмет удалён из учебного плана",
+  "curriculumSubjectSuccessUpdated": "Предмет учебного плана обновлён",
+  "curriculumSubjectNoChanges": "Нет изменений для сохранения",
+  "curriculumSubjectDeleteConfirmTitle": "Удалить предмет из плана?",
+  "curriculumSubjectDeleteConfirmText": "Предмет будет удалён из этого учебного плана. Это действие нельзя отменить.",
+  "curriculumStatusDRAFT": "Черновик",
+  "curriculumStatusUNDER_REVIEW": "На проверке",
+  "curriculumStatusAPPROVED": "Утверждён",
+  "curriculumStatusARCHIVED": "В архиве",
+  "subjectUsagesTitle": "Использование в учебных планах",
+  "subjectUsagesSubtitle": "Этот предмет включён в следующие учебные планы:",
+  "subjectNotInAnyCurriculum": "Этот предмет пока не используется ни в одном учебном плане",
+  "subjectNotInAnyCurriculumHint": "Добавьте этот предмет в учебный план, чтобы включить его в образовательную программу.",
+  "subjectGoToPrograms": "Перейти к программам"
 }
