--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -230,6 +230,12 @@
   "accountStatus": "状态",
   "accountStatusPending": "待处理",
   "accountStatusActive": "已激活",
+  "accountStatusDisabled": "已禁用",
+  "accountSectionAccount": "账户",
+  "accountSectionTeacherProfile": "教师档案",
+  "accountSectionStudentProfile": "学生档案",
+  "accountDisplayNameLabel": "显示名称",
+  "accountProfileUpdatedAt": "更新时间",
   "accountErrorLoadList": "无法加载用户列表",
   "accountErrorLoad": "无法加载用户",
   "accountUserNotFound": "用户未找到",
@@ -303,5 +309,103 @@
   "assessmentTypeCode_COURSE_WORK": "课程论文",
   "assessmentTypeCode_COURSE_PROJECT": "课程设计",
   "assessmentTypeCode_MIDTERM": "期中考试",
-  "assessmentTypeCode_TEST": "测验"
+  "assessmentTypeCode_TEST": "测验",
+  "profilePageTitle": "个人资料：{{name}}",
+  "profilePageTitleShort": "我的资料",
+  "profileEditTitle": "编辑资料",
+  "profileEditHint": "在下方修改姓名、电话和出生日期。邮箱不可在此修改。",
+  "profileIntro": "这是您的管理员资料。您只能编辑基本账户信息（姓名、电话、出生日期）。其他角色（如教师或学生）的数据在相应模块中管理。",
+  "profileErrorLoad": "无法加载资料",
+  "profileErrorUpdate": "更新资料失败",
+  "profileCardPersonal": "个人信息",
+  "profileDoubleClickToEdit": "双击编辑",
+  "profilePressEnterToSave": "Enter 保存，Escape 取消",
+  "profileAccountReadOnly": "邮箱和角色不可在此修改。",
+  "profileMemberSince": "加入时间",
+  "profileChangePassword": "修改密码",
+  "profileCurrentPassword": "当前密码",
+  "profileNewPassword": "新密码",
+  "profileConfirmPassword": "确认新密码",
+  "profileUpdatePassword": "更新密码",
+  "profilePasswordComingSoon": "修改密码功能即将开放。",
+  "profilePermissionsTitle": "权限与访问",
+  "profilePermissionActive": "已启用",
+  "profilePermissionDefaultDesc": "此角色已授予相应访问权限。",
+  "permissionStaffDesc": "仅查看。可浏览院系、项目、学科、用户和邀请。不可创建、编辑、删除或邀请。",
+  "permissionModeratorDesc": "可查看和编辑所有数据：院系、项目、学科、用户。不可创建或管理邀请（邀请新用户）。",
+  "permissionAdminDesc": "完整权限：管理用户、发送与取消邀请、编辑系统数据与设置。",
+  "permissionSuperAdminDesc": "无限制的完整管理权限。",
+  "curriculumSubjectsSectionTitle": "培养方案课程",
+  "curriculumSubjectsPageTitle": "培养方案 {{version}} 的课程",
+  "curriculumSubjectsViewTitle": "查看课程",
+  "curriculumSubjectsTotalSubjects": "课程总数",
+  "curriculumSubjectsTotalCredits": "总学分",
+  "curriculumSubjectsTotalHours": "总学时",
+  "curriculumSubjectsTotalSemesters": "学期数",
+  "curriculumSubjectSearchPlaceholder": "搜索课程...",
+  "curriculumSubjectFilterBySemester": "按学期筛选",
+  "curriculumSubjectAllSemesters": "所有学期",
+  "curriculumSubjectSemesterN": "第{{n}}学期",
+  "curriculumSubjectSubjectsCount": "门课程",
+  "curriculumSubjectAdd": "添加课程",
+  "curriculumSubjectAddFirst": "添加第一门课程",
+  "curriculumSubjectNoSubjects": "此培养方案暂无课程",
+  "curriculumSubjectNoSubjectsHint": "添加课程以定义教学计划结构。",
+  "curriculumSubjectCredits": "学分",
+  "curriculumSubjectHoursTotal": "总学时",
+  "curriculumSubjectHoursLecture": "讲授",
+  "curriculumSubjectHoursPractice": "实践",
+  "curriculumSubjectHoursLab": "实验",
+  "curriculumSubjectHoursSeminar": "研讨",
+  "curriculumSubjectHoursSelfStudy": "自学",
+  "curriculumSubjectHoursConsultation": "答疑",
+  "curriculumSubjectHoursCourseWork": "课程设计",
+  "curriculumSubjectAssessmentType": "考核",
+  "curriculumSubjectViewSubject": "查看课程详情",
+  "curriculumSubjectCreatePageTitle": "添加课程到培养方案",
+  "curriculumSubjectEditPageTitle": "编辑培养方案课程",
+  "curriculumSubjectCreate": "添加课程",
+  "curriculumSubjectSectionSelectSubject": "选择课程",
+  "curriculumSubjectSubjectSearch": "搜索课程",
+  "curriculumSubjectSubjectSearchPlaceholder": "按代码或名称搜索...",
+  "curriculumSubjectSubject": "课程",
+  "curriculumSubjectSelectSubject": "— 请选择课程 —",
+  "curriculumSubjectSelectedSubject": "已选课程：",
+  "curriculumSubjectSectionBasicParams": "基本参数",
+  "curriculumSubjectSemester": "学期",
+  "curriculumSubjectCourseYear": "学年",
+  "curriculumSubjectCourseYearPlaceholder": "如：1",
+  "curriculumSubjectDurationWeeks": "周数",
+  "curriculumSubjectWeeks": "周",
+  "curriculumSubjectSelectAssessmentType": "— 请选择考核类型 —",
+  "curriculumSubjectCreditsPlaceholder": "如：3.5",
+  "curriculumSubjectSectionHours": "学时分配",
+  "curriculumSubjectSectionEditableParams": "可编辑参数",
+  "curriculumSubjectInfoTitle": "课程信息",
+  "curriculumSubjectErrorSubjectRequired": "请选择课程",
+  "curriculumSubjectErrorSemesterRequired": "学期必须大于等于1",
+  "curriculumSubjectErrorDurationRequired": "请填写周数",
+  "curriculumSubjectErrorAssessmentRequired": "请选择考核类型",
+  "curriculumSubjectErrorConflict": "该课程已添加到此学期",
+  "curriculumSubjectErrorValidation": "请检查表单字段。",
+  "curriculumSubjectErrorNotFound": "课程或考核类型未找到",
+  "curriculumSubjectErrorCreate": "添加课程失败",
+  "curriculumSubjectErrorUpdate": "更新课程失败",
+  "curriculumSubjectErrorDelete": "删除课程失败",
+  "curriculumSubjectErrorLoad": "无法加载培养方案课程",
+  "curriculumSubjectNotFoundOrDeleted": "培养方案课程未找到或已删除",
+  "curriculumSubjectSuccessDeleted": "课程已从培养方案中移除",
+  "curriculumSubjectSuccessUpdated": "培养方案课程已更新",
+  "curriculumSubjectNoChanges": "无需保存的更改",
+  "curriculumSubjectDeleteConfirmTitle": "从培养方案中移除课程？",
+  "curriculumSubjectDeleteConfirmText": "课程将从此培养方案中移除。此操作不可撤销。",
+  "curriculumStatusDRAFT": "草稿",
+  "curriculumStatusUNDER_REVIEW": "审核中",
+  "curriculumStatusAPPROVED": "已批准",
+  "curriculumStatusARCHIVED": "已归档",
+  "subjectUsagesTitle": "在培养方案中的使用",
+  "subjectUsagesSubtitle": "此课程已被以下培养方案引用：",
+  "subjectNotInAnyCurriculum": "此课程尚未被任何培养方案引用",
+  "subjectNotInAnyCurriculumHint": "将此课程添加到培养方案以纳入教学计划。",
+  "subjectGoToPrograms": "前往专业与培养方案"
 }
