Refactor admin dashboard pages to utilize shared UI components; replace hardcoded back labels with a common translation function for improved consistency across Curriculum, Department, and Program pages.

--- a/src/shared/i18n/locales/ru/common.json
+++ b/src/shared/i18n/locales/ru/common.json
@@ -7,6 +7,7 @@
   "delete": "Удалить",
   "edit": "Редактировать",
   "view": "Просмотр",
+  "back": "Назад",
   "backToList": "К списку",
   "cancelButton": "Отмена",
   "submit": "Отправить",
