--- a/src/shared/i18n/locales/en/common.json
+++ b/src/shared/i18n/locales/en/common.json
@@ -7,6 +7,7 @@
   "delete": "Delete",
   "edit": "Edit",
   "view": "View",
+  "back": "Back",
   "backToList": "Back to list",
   "cancelButton": "Cancel",
   "submit": "Submit",
