--- a/src/shared/i18n/locales/zh-Hans/common.json
+++ b/src/shared/i18n/locales/zh-Hans/common.json
@@ -7,6 +7,7 @@
   "delete": "删除",
   "edit": "编辑",
   "view": "查看",
+  "back": "返回",
   "backToList": "返回列表",
   "cancelButton": "取消",
   "submit": "提交",
